# MHMNavierStokes

./: CMakeLists.txt  README.md
GmshRefs/: Example3D.geo  Example3D.msh  Example3D01.geo  Example3Dv8.geo  Example3Dv8.msh  MultiVugs.geo  MultiVugs.msh  MultiVugs02.geo  MultiVugs02.msh  ObstacleTunnel.geo  ObstacleTunnel.msh  ObstacleTunnel10K.geo  ObstacleTunnel10K.msh  ObstacleTunnel10K2.geo  ObstacleTunnel10K2.msh  ObstacleTunnel10Kquad.geo  ObstacleTunnel10Kquad.msh  ObstacleTunnel500.geo  ObstacleTunnel500.msh  SimInfiltration01.geo  SimInfiltration01.msh  SimInfiltration02.geo  SimInfiltration02.msh  SimpleVug.geo  SimpleVug.msh  ThreeVugs.geo  t4.geo  t4.msh  testvug.geo
NavierStokes/: CMakeLists.txt  HybridBrinkmanTest.cpp  MHMNavierStokesTest.cpp  MHMNavierStokesTest.h  NavierStokesTest.cpp  NavierStokesTest.h  TPZInterfaceInsertion.cpp  TPZInterfaceInsertion.h  TPZMHMNavierStokesMaterial.cpp  TPZMHMNavierStokesMaterial.h  TPZMHMNavierStokesMeshControl.cpp  TPZMHMNavierStokesMeshControl.h  TPZNSAnalysis.cpp  TPZNSAnalysis.h  TPZNSBuildTransfers.cpp  TPZNSBuildTransfers.h  TPZNSMemory.cpp  TPZNSMemory.h  TPZNavierStokesMaterial.cpp  TPZNavierStokesMaterial.h  TPZSimulationData.cpp  TPZSimulationData.h  main.cpp
